<resources>
    <string name="app_name">SculaTask</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="myprofile">My Profile</string>
    <string name="events">Events</string>
    <string name="favourites">Favourites</string>
    <string name="inbox">Inbox</string>
    <string name="contactus">Contact Us</string>
    <string name="feedback">Feed back</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="logout">Log out</string>
    <string name="myschools">My Schools</string>
    <string name="howuseit">How to use Application</string>
    <string name="addschool">Add a school</string>
    <string name="scula">SCULA</string>
    <string name="schoolfollow">SCHOOL FOLLOW APP</string>
    <string name="username">User Name</string>
</resources>
