<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="horizontal"
    tools:ignore="RtlCompat"
    android:weightSum="3"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="120dp">



<RelativeLayout
    android:id="@+id/rl_myschools"
    android:clickable="true"
    android:focusable="auto"
    android:background="@drawable/selector"
    android:layout_weight="1"
    android:layout_width="0dp"
    android:layout_height="match_parent"
   >

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle_red_img"
        android:layout_width="60dp"
        android:layout_height="60dp">
        <ImageView
            android:tint="@color/white"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_school"
            android:layout_width="40dp"
            android:layout_height="40dp" />
    </RelativeLayout>

    <TextView
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/myschools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>

    <View
        android:alpha=".5"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>
    <RelativeLayout
        android:id="@+id/rl_addschool"
        android:clickable="true"
        android:focusable="auto"
        android:background="@drawable/selector"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <ImageView
            android:tint="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_add_school"
            android:layout_width="50dp"
            android:layout_height="50dp"/>


        <TextView
            android:layout_marginBottom="8dp"
            android:id="@+id/tv_addschool"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/addschool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <View
        android:alpha=".5"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:id="@+id/rl_guideline"
        android:clickable="true"
        android:focusable="auto"
        android:background="@drawable/selector"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_above="@+id/tv_terms"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:background="@drawable/circle_red_img"
            android:layout_width="60dp"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/iv_useapp"
                android:tint="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_school"
                android:layout_width="25dp"
                android:layout_height="25dp" />
            <TextView
                android:id="@+id/tv_appname"
                android:textSize="10sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:layout_below="@+id/iv_useapp"
                android:text="@string/scula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView

                android:textSize="4sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:layout_below="@+id/tv_appname"
                android:text="@string/schoolfollow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <TextView
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:id="@+id/tv_terms"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/howuseit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


</LinearLayout>