<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="RtlCompat"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_contactus"
        android:clickable="true"
        android:focusable="auto"
        android:background="@drawable/selector"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_contact_us"
            android:layout_centerVertical="true"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <TextView
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black_"
            android:text="@string/contactus"
            android:textAlignment="viewStart"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_feedback"
        android:clickable="true"
        android:focusable="auto"
        android:background="@drawable/selector"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_feedback"
            android:layout_centerVertical="true"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <TextView
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black_"
            android:text="@string/feedback"
            android:textAlignment="viewStart"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_settings"
        android:clickable="true"
        android:focusable="auto"
        android:background="@drawable/selector"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_settings"
            android:layout_centerVertical="true"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <TextView
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black_"
            android:text="@string/action_settings"
            android:textAlignment="viewStart"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />


    </LinearLayout>




</LinearLayout>